# Katago-Android-build

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/katago/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/cl_stub-master/include/CL/: cl.h
app/src/main/cpp/command/: benchmark.cpp
app/src/main/cpp/configs/: analysis_example.cfg  contribute_example.cfg  gtp_example.cfg  match_example.cfg
app/src/main/cpp/core/: sha2.cpp
app/src/main/cpp/dataio/: numpywrite.cpp
app/src/main/cpp/neuralnet/: desc.cpp  eigenbackend.cpp  nneval.cpp  openclincludes.h
app/src/main/cpp/zip/: mkstemp.c  zip.h  zip_source_deflate.c
app/src/main/java/com/example/katago/: MainActivity.java  Native.java
app/src/main/jniLibs/armeabi-v7a/: test_stub
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/katago/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
